--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  json_annotation: ^3.1.0
 
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.10.3
+  json_serializable: ^3.5.0
 
 flutter:
   uses-material-design: true
