--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   json_annotation: ^3.1.0
-
+  flutter_riverpod: ^0.12.2
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
