--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,20 +6,20 @@ publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: ^2.10.0
+  sdk: '>=2.12.0-0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  json_annotation: ^3.1.0
-  flutter_riverpod: ^0.12.2
+  json_annotation: ^4.0.0-nullsafety.0
+  flutter_riverpod: ^0.13.0-nullsafety.1
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^1.10.3
-  json_serializable: ^3.5.0
+  json_serializable: ^4.0.0-nullsafety.0
 
 flutter:
   uses-material-design: true
